--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -593,3 +593,4 @@ main{flex:1}
 #operatorsTable th.col-role{width:120px}
 #operatorsTable th.col-status{width:120px}
 #operatorsTable th.col-actions{width:260px}
+#templatesTable th.col-actions{width:60px}
